--- a/client/src/assets/style/Admin/Header.scss
+++ b/client/src/assets/style/Admin/Header.scss
@@ -3,8 +3,10 @@
     top: 0;
     z-index: 1;
     width: 100%;
-    background-color: var(--dark-blue);
+    font-weight: 600;
+    background: linear-gradient(to bottom, #000099 0%, #000066 100%);
     .menu {
+        font-size: 1rem !important;
         background-color: transparent;
         color: #fff;
     }
